[project]
name = "desmin-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joon-Hyuk Ko", email = "jhko725@kias.re.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "aicsimageio>=4.14.0",
    "aicspylibczi>=3.1.1",
    "array-api-compat>=1.13.0",
    "cmocean>=4.0.3",
    "colorcet>=3.1.0",
    "einops>=0.8.1",
    "h5py>=3.14.0",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.8.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "ott-jax>=0.6.0",
    "polars>=1.29.0",
    "pyvista[jupyter]>=0.45.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16",
    "tqdm>=4.67.1",
    "trame>=3.10.1",
    "xarray>=2025.9.0",
]

[project.scripts]
desmin-reconstruction = "desmin_reconstruction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-include = ["*.ipynb"]
src = []
fix = true

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
